--- a/learn-nestjs-api-fun-tutorial-b01/.env
+++ b/learn-nestjs-api-fun-tutorial-b01/.env
@@ -5,3 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://postgres:123@localhost:5434/learn_fun_nest_dev_db?schema=public"
+JWT_SECRET="super-secret"
