[learn-basic-fun-nestjs-pro-b01] 10. First learn basic setup e2e tests with pactumJs and Setting up test database and Automate test database restart & migrations and  Using dotenv cli with prisma b01

--- a/learn-nestjs-api-fun-tutorial-b01/docker-compose.yml
+++ b/learn-nestjs-api-fun-tutorial-b01/docker-compose.yml
@@ -7,7 +7,17 @@ services:
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: 123
-      POSTGRES_DB: learn_fun_nest_dev_db
+      POSTGRES_DB: learn_fun_nest_db
+    networks:
+      - phucdo2601
+  test-db:
+    image: postgres:15
+    ports:
+      - 5435:5432
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: 123
+      POSTGRES_DB: learn_fun_nest_db
     networks:
       - phucdo2601
 networks:
