--- a/listNestPro/les01-ec-web-b01/l-nest-api-e-commerce-web-b01/package.json
+++ b/listNestPro/les01-ec-web-b01/l-nest-api-e-commerce-web-b01/package.json
@@ -19,21 +19,23 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "typeorm": "npm run build && npx typeorm -d dist/db/data-source.js",
-    "migration:generate":"npm run typeorm -- migration:generate",
-    "migration:run":"npm run typeorm -- migration:run",
-    "migration-revert":"npm run typeorm -- migration:revert",
-    "db:drop":"npm run typeorm schema:drop"
+    "migration:generate": "npm run typeorm -- migration:generate",
+    "migration:run": "npm run typeorm -- migration:run",
+    "migration-revert": "npm run typeorm -- migration:revert",
+    "db:drop": "npm run typeorm schema:drop"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^7.1.16",
     "@nestjs/typeorm": "^10.0.1",
     "dotenv": "^16.3.1",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.14",
     "rxjs": "^7.8.1",
+    "swagger-ui-express": "^5.0.0",
     "typeorm": "^0.3.17"
   },
   "devDependencies": {
