--- a/listNestPro/les01-ec-web-b01/l-nest-api-e-commerce-web-b01/.env
+++ b/listNestPro/les01-ec-web-b01/l-nest-api-e-commerce-web-b01/.env
@@ -3,3 +3,5 @@ DB_PORT=5434
 DB_USERNAME=postgres
 DB_PASSWORD=123
 DB_DATABASE=learn_nest_api_pro_ec_web_b01
+ACCESS_TOKEN_SECRET_KEY=VCXLNSDFLNCSRLWDaa
+ACCESS_TOKEN_SECRET_TIME=30m
