--- a/listNestPro/les02-ec-web-micro-service-b01/les02-nest-ec-web-micro-service-b01/package.json
+++ b/listNestPro/les02-ec-web-micro-service-b01/les02-nest-ec-web-micro-service-b01/package.json
@@ -22,10 +22,13 @@
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/mongoose": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.17",
     "@types/config": "^3.3.3",
+    "@types/mongoose": "^5.11.97",
     "config": "^3.3.9",
+    "mongoose": "^8.0.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
